@@ -2,6 +2,11 @@ Revision history for BSON
 
 {{$NEXT}}
 
+    [Fixed]
+
+    - Improved detection and error messages when trying to encode
+      non-container types.
+
 v1.2.0    2016-08-17 15:51:50-04:00 America/New_York
 
     [Added]
